<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HawksNest2014</string>
    <string name="complex">Pick a Complex</string>
    <string name="dorm">Pick a Residence Hall</string>
    <string name="hasbrouck">Hasbrouck Complex</string>
    <string name="parker">Parker Complex</string>
    <string name="south">South Complex</string>
    <string name="bevier">Bevier</string>
    <string name="bliss">Bliss</string>
    <string name="bouton">Bouton</string>
    <string name="capen">Capen</string>
    <string name="collango">College/Shango</string>
    <string name="crispell">Crispell</string>
    <string name="deyo">Deyo</string>
    <string name="dubois">DuBois</string>
    <string name="esopus">Esopus</string>
    <string name="gage">Gage</string>
    <string name="lefevre">Lefevre</string>
    <string name="lenape">Lenape</string>
    <string name="scudder">Scudder</string>
    <string name="ra_list">RAs</string>
    <string name="dorm_events">Events</string>
    <string name="dorm_hours">RA Hours</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_dorm_info">DormInfo</string>
    <string name="json_error">Error occurred when attempting to connect to the database.</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="hello_world">Hello world!</string>
    <string name="aboutus">This app was created by TEAM MVP, Matt Miccio, Ivan Vivar, and Kenny Pan, three CE students at SUNY New Paltz. This app was created with our school\'s residence halls in mind, so we could view different information about the dormitories.</string>

</resources>
